# Corsair-RX-Fan-Display

./: CMakeLists.txt  LICENSE  Makefile  README.md
app/: Makefile  main.cpp
app/gui/: app.cpp  app.hpp  button.cpp  button.hpp  event_loop.cpp  event_loop.hpp  gui_manager.cpp  gui_manager.hpp  label.cpp  label.hpp  panel.hpp  textbox.hpp  widget.hpp  window.cpp  window.hpp
app/gui/panels/: lighting_panel.cpp  lighting_panel.hpp  panel.cpp  panel.hpp
app/serial/: serial_transmitter.cpp  serial_transmitter.hpp
app/src/: main.cpp
common/: display.cpp  display.hpp  display_image.hpp  int_types.hpp
firmware/: Makefile
firmware/serial/: serial_receiver.cpp  serial_receiver.hpp
gui/: Makefile
tests/: image_write.ino  send.py
